Api controllers and resources updated
